--- a/index.html
+++ b/index.html
@@ -4,9 +4,138 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/svg-inject.min.js"></script>
+    <title>Project Nubank</title>
 </head>
 <body>
-    
+
+    <header id="header">
+        <nav class="navbar-mobile">
+          <div class="bx" id="bx"></div>
+          <div class="logo">
+            <a href=""
+              ><img
+                src="svg/logonu.svg"
+                alt="Logotipo Nubank"
+                onload="SVGInject(this)"
+            /></a>
+          </div>
+          <a href="">Login</a>
+        </nav>
+        <nav class="navbar-desktop">
+          <div class="navbar-desktop-item-1">
+            <div class="logo">
+              <a href=""
+                ><img
+                  src="svg/logonu.svg"
+                  alt="Logotipo Nubank"
+                  onload="SVGInject(this)"
+              /></a>
+            </div>
+            <ul class="menu-desktop">
+              <li class="menu-item" id="menu-item-1">
+                <a href="" class="nav-link-desktop">Nubank</a>
+                <ul class="dropdown-menu" id="dropdown-item-1">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">O Nu</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Carreiras</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Imprensa</a>
+                  </li>
+                </ul>
+              </li>
+  
+              <li class="menu-item" id="menu-item-2">
+                <a href="" class="nav-link-desktop">Conta digital</a>
+                <ul class="dropdown-menu" id="dropdown-item-2">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Crie sua conta</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Transferências</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Rendimento</a>
+                  </li>
+                </ul>
+              </li>
+  
+              <li class="menu-item" id="menu-item-3">
+                <a href="" class="nav-link-desktop">Pra você</a>
+                <ul class="dropdown-menu" id="dropdown-item-3">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Comunidade</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Rewards</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Novidades</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="navbar-desktop-item-2">
+            <a href="" class="btn mr-2">Quero ser Nubank</a>
+  
+            <a href="">Login</a>
+          </div>
+        </nav>
+  
+        <nav class="menu-mobile" id="menu-mobile">
+          <ul class="nav-list-mobile">
+            <li><a href="" class="nav-link-mobile">Nubank</a></li>
+            <li><a href="" class="nav-link-mobile">Conta digital</a></li>
+            <li><a href="" class="nav-link-mobile">Pra você</a></li>
+            <li><a href="" class="nav-link-mobile">Quero ser Nubank</a></li>
+            <li><a href="" class="nav-link-mobile">Redes sociais</a></li>
+  
+            <li class="mt-3">
+              <a href=""
+                ><img
+                  src="svg/icon-facebook.svg"
+                  alt="Logotipo Nubank"
+                  onload="SVGInject(this)"
+              /></a>
+              <a href=""
+                ><img
+                  src="svg/icon-youtube.svg"
+                  alt="Logotipo Nubank"
+                  onload="SVGInject(this)"
+              /></a>
+              <a href=""
+                ><img
+                  src="svg/icon-instagram.svg"
+                  alt="Logotipo Nubank"
+                  onload="SVGInject(this)"
+              /></a>
+              <a href=""
+                ><img
+                  src="svg/icon-twitter.svg"
+                  alt="Logotipo Nubank"
+                  onload="SVGInject(this)"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+  
+      <!--SCRIPT -->
+  
+      <script src="js/app.js"></script>
+   
 </body>
 </html>
