--- a/index.html
+++ b/index.html
@@ -97,32 +97,32 @@
   
         <nav class="menu-mobile" id="menu-mobile">
           <ul class="nav-list-mobile">
-            <li><a href="" class="nav-link-mobile">Nubank</a></li>
-            <li><a href="" class="nav-link-mobile">Conta digital</a></li>
-            <li><a href="" class="nav-link-mobile">Pra você</a></li>
-            <li><a href="" class="nav-link-mobile">Quero ser Nubank</a></li>
-            <li><a href="" class="nav-link-mobile">Redes sociais</a></li>
+            <li class="mb-1"><a href="" class="nav-link-mobile">Nubank</a></li>
+            <li class="mb-1"><a href="" class="nav-link-mobile">Conta digital</a></li>
+            <li class="mb-1"><a href="" class="nav-link-mobile">Pra você</a></li>
+            <li class="mb-1"><a href="" class="nav-link-mobile">Quero ser Nubank</a></li>
+            <li class="mb-1"><a href="" class="nav-link-mobile">Redes sociais</a></li>
   
-            <li class="mt-3">
-              <a href=""
+            <li class="mt-3 flex-center">
+              <a href="" class="mx-1"
                 ><img
                   src="svg/icon-facebook.svg"
                   alt="Logotipo Nubank"
                   onload="SVGInject(this)"
               /></a>
-              <a href=""
+              <a href="" class="mx-1"
                 ><img
                   src="svg/icon-youtube.svg"
                   alt="Logotipo Nubank"
                   onload="SVGInject(this)"
               /></a>
-              <a href=""
+              <a href="" class="mx-1"
                 ><img
                   src="svg/icon-instagram.svg"
                   alt="Logotipo Nubank"
                   onload="SVGInject(this)"
               /></a>
-              <a href=""
+              <a href="" class="mx-1"
                 ><img
                   src="svg/icon-twitter.svg"
                   alt="Logotipo Nubank"
@@ -132,6 +132,38 @@
           </ul>
         </nav>
       </header>
+
+
+      <!--========== HERO ===========-->
+
+      <main class="container hero py-5">
+        <div class="flex-item-1 py-3">
+          <h1>Ser Nubank é 
+            reinventar sua 
+            vida financeira.</h1>
+
+            <p class="my-2">
+              Conta com rendimento acimada poupança, cartão de crédito sem anuidade e o melhor: resolva tudo pelo app.
+            </p>
+            <div class="flex-start">
+              <a href="" class="btn">Quero ser Nubank</a><a href=""><img class="ml-1"
+                src="svg/appstore.svg"
+                alt="Logotipo Nubank"
+                onload="SVGInject(this)"
+            /></a><a href=""><img class="ml-1"
+              src="svg/playstore.svg"
+              alt="Logotipo Nubank"
+              onload="SVGInject(this)"></a>
+            </div>
+
+            
+        </div>
+        <div class="flex-item-1">
+
+        </div>
+
+      </main>
+
   
       <!--SCRIPT -->
   
