--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 
 
       <!--========== HERO ===========-->
+      <div class="bg-home">
+        <img
+          class="svg-bg-home"
+          src="/svg/bg-home.svg"
+          alt=""
+          onload="SVGInject(this)"
+        />
+      </div>
 
       <main class="container hero py-5">
         <div class="flex-item-1 py-3">
@@ -158,9 +166,31 @@
 
             
         </div>
-        <div class="flex-item-1">
-
-        </div>
+        <div
+        class="flex-item-3 flex-center div-card py-4"
+        data-aos="fade-up"
+        data-aos-delay="400"
+      >
+        <img
+          src="svg/icon-card.svg"
+          class="icon-card-hero dropshadow"
+          alt=""
+          onload="SVGInject(this)"
+        />
+        <img
+          src="svg/icon-mobile.svg"
+          class="icon-mobile-hero dropshadow"
+          alt=""
+          onload="SVGInject(this)"
+        />
+        <img
+          src="svg/icon-contactless.svg"
+          class="icon-contactless-hero dropshadow"
+          alt=""
+          onload="SVGInject(this)"
+        />
+        <div class="card"></div>
+      </div>
 
       </main>
 
