--- a/index.html
+++ b/index.html
@@ -193,8 +193,56 @@
       </div>
 
       </main>
+      <!--========== SECTION PEOPLE ===========-->
+      <section class="container">
+          <div class="flex-item-4 flex-column">
+            <h5>Para todos</h5>
+            <h2>Completo.</h2>
+            <p>
+              Resolva seu dia a dia pelo celular. Sem filas, sem anuidade, sem tarifas abusivas. 
+              Cuide do seu dinheiro de um jeito simples. 
+              Somos eficientes para você usar seu dinheiro com o que realmente importa, 
+              sem tarifas de manutenção.
+            </p>
+            <ul class="list">
+              <li class="list-item bg-icon-mobile">
+                <strong>
+                100% gratuito
+              </strong>
+              <p>Isso mesmo, você não paga nada para abrir uma conta.</p>
+            </li>
+              <li class="list-item bg-icon-mobile">
+                <strong>
+                  Sem taxas ou cobranças
+              </strong>
+              <p>
+                Não se preocupe com taxas adicionais ou anuidades.
+              </p>
+            </li>
+              <li class="list-item bg-icon-mobile">
+                <strong>
+                  O melhor suporte de todos.
+               </strong>
+               <p>
+                 Segundo pesquisas, temos o melhor suporte para você.
+               </p>
+              </li>
+            </ul>
+            <p>
+              <a href="" class="link">Confira os benefícios</a>
+            </p>
 
-  
+          </div>
+          <div class="flex-item-3">
+            <img src="svg/svg-people1.svg" alt="" onload="SVGInject(this)">
+            
+          </div>
+
+          <div class="flex-item-1 flex-column">
+            <img src="svg/svg-people2.svg" alt="" onload="SVGInject(this)">
+            <img src="svg/svg-people3.svg" alt="" onload="SVGInject(this)">
+          </div>
+      </section>
       <!--SCRIPT -->
   
       <script src="js/app.js"></script>
